hphp/hack/test/typecheck/inout/bad_inout_use_arg15.php
<?hh // strict

function f(inout Vector<int> $v): void {
  $v = Vector {};
}

function test(): void {
  $x = Map { 'wow' => Vector { 256 } };
  f(inout $x['nope']);
}
